--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,6 @@ const { title } = Astro.props;
       <footer class="[grid-area:player] rounded-lg min-h-[100px]">
         PLAYER
       </footer>
-      <slot />
     </div>
   </body>
 </html>
@@ -37,8 +36,8 @@ const { title } = Astro.props;
   #app {
     display: grid;
     grid-template-areas:
-      'aside main main'
-      'player player player'
+      'aside main'
+      'player player'
     ;
     grid-template-columns: 350px 1fr;
     grid-template-rows: 1fr auto;
