--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,25 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import PlayListItemCard from '@/components/PlayListItemCard.astro';
+import Layout from '../layouts/Layout.astro'
+import { playlists } from '@/lib/data'
 ---
 
 <Layout title="Spotify Clone">
+  <div
+    id="playlist-container"
+    class="relative transition-all duration-1000 bg-green-600"
+  >
 
+  <div class="relative z-10 px-6">
+    <h2 class="text-4xl py-5">Buenos días</h2>
+    <div class="flex flex-wrap mt-6 gap-4">
+      {playlists.map(playlist => <PlayListItemCard playlist={playlist} />)}
+    </div>
+  </div>
+
+  <div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80">
+  </div>
+  </div>
 </Layout>
 
 <style>
