--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -14,12 +14,14 @@ const artistsString = artists.join(', ')
 <a
   href={`/playlist/${id}`}
   class="playlist-item flex relative p-2 overflow-hidden gap-2 pb-6 rounded-md hover:bg-zinc-800 transition-all duration-300 shadow-lg hover:shadow-lg bg-zinc-500/30 w-44 flex-col"
+  transition:name=`playlist ${id} box`
 >
   <picture class="aspect-square w-full h-auto flex-none">
     <img
       src={cover}
       alt={`Cover of ${title}`}
       class="object-cover w-full h-full rounded-md"
+      transition:name=`playlist ${id} image`
     />
   </picture>
 
