--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { playlists } from '@/lib/data'
   >
 
   <div class="relative z-10 px-6">
-    <h2 class="text-4xl py-5">Buenos días</h2>
+    <h2 class="text-4xl py-5 font-bold">Buenos días</h2>
     <div class="flex flex-wrap mt-6 gap-4">
       {playlists.map(playlist => <PlayListItemCard playlist={playlist} />)}
     </div>
