--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import PlayListItemCard from '@/components/PlayListItemCard.astro';
 import Layout from '../layouts/Layout.astro'
 import { playlists } from '@/lib/data'
+import Greating from '@/components/Greating.svelte'
 ---
 
 <Layout title="Spotify Clone">
@@ -11,7 +12,7 @@ import { playlists } from '@/lib/data'
   >
 
   <div class="relative z-10 px-6">
-    <h2 class="text-4xl py-5 font-bold">Buenos días</h2>
+    <Greating />
     <div class="flex flex-wrap mt-6 gap-4">
       {playlists.map(playlist => <PlayListItemCard playlist={playlist} />)}
     </div>
