--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -1,7 +1,7 @@
 ---
 import PlayListItemCard from '@/components/PlayListItemCard.astro';
 import Layout from '../../layouts/Layout.astro'
-import { allPlaylists, songs } from '@/lib/data'
+import { allPlaylists, playlists, songs } from '@/lib/data'
 
 const { id } = Astro.params
 
@@ -13,18 +13,40 @@ const playListSong = songs.filter(song => song.albumId === playList?.albumId)
 <Layout title="Spotify Clone">
   <div
     id="playlist-container"
-    class="relative flex flex-col h-full bg-zinc-900 overflow-x-hidden"
+    class="relative flex flex-col h-full overflow-x-hidden bg-gradient-to-t from-zinc-900 to-teal-300"
     transition:name=`playlist ${id} box`
   >
-  <header class="flex flex-col gap-8 px-6">
+  <header class="flex flex-row gap-8 px-6 mt-16">
     <picture class="aspect-square w-52 h-52 flex-none">
       <img
         src={playList?.cover}
         alt={`Cover of ${playList?.title}`}
-        class="object-cover w-full h-full rounded-md"
+        class="object-cover w-full h-full shadow-lg"
         transition:name=`playlist ${playList?.id} image`
       />
     </picture>
+
+    <div class="flex flex-col justify-between">
+      <h2 class="flex flex-1 items-end">Playlist</h2>
+      <div>
+        <h1 class="text-5xl font-bold block text-white">
+          {playList?.title}
+          <span transition:name=`playlist ${playList?.id} title`></span>
+        </h1>
+      </div>
+
+      <div class="flex-1 flex items-end">
+        <div class="text-sm text-gray-300 font-normal">
+          <div transition:name=`playlist ${playList?.id} artists`>
+            <span>{playList?.artists.join(", ")}</span>
+          </div>
+          <p class="mt-1">
+            <span class="text-white">1 canciones</span>,
+            3h aproximadamente
+          </p>
+        </div>
+      </div>
+    </div>
   </header>
 
 
@@ -32,7 +54,7 @@ const playListSong = songs.filter(song => song.albumId === playList?.albumId)
 
   </div>
 
-  <div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80">
+  <div class="absolute inset-0">
   </div>
   </div>
 </Layout>
