--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { Player } from '@/components/Player';
 import AsideMenu from '../components/AsideMenu.astro'
 import { ViewTransitions } from 'astro:transitions'
 interface Props {
@@ -28,7 +29,7 @@ const { title } = Astro.props;
         <slot />
       </main>
       <footer class="[grid-area:player] rounded-lg min-h-[100px]">
-        PLAYER
+        <Player client:load transition:name="media-player" transition:persist />
       </footer>
     </div>
   </body>
