--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import PlayListItemCard from '@/components/PlayListItemCard.astro';
+import PlayListItemCard from '../components/PlayListItemCard.astro'
 import Layout from '../layouts/Layout.astro'
-import { playlists } from '@/lib/data'
-import Greating from '@/components/Greating.svelte'
+import Greating from '../components/Greating.svelte'
+import { playlists } from '../lib/data'
 ---
 
 <Layout title="Spotify Clone">
