--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -1,9 +1,9 @@
 ---
-import PlayListItemCard from '@/components/PlayListItemCard.astro';
+import PlayListItemCard from '../../components/PlayListItemCard.astro';
 import Layout from '../../layouts/Layout.astro'
-import { allPlaylists, playlists, songs } from '@/lib/data'
-import MusicsTable from '@/components/MusicsTable.astro';
-import CardPlayButton from '@/components/CardPlayButton';
+import { allPlaylists, playlists, songs } from '../../lib/data'
+import MusicsTable from '../../components/MusicsTable.astro';
+import CardPlayButton from '../../components/CardPlayButton';
 
 const { id } = Astro.params
 
